force-app/src/objects/c2g__BankAccountAdjustmentLineItem__c.object
<CustomObject>
    <fields>
        <fullName>c2g__Adjustment__c</fullName>
        <label>Bank Account Adjustment</label>
        <referenceTo>c2g__BankAccountAdjustment__c</referenceTo>
        <relationshipLabel>Bank Account Adjustment Line Items</relationshipLabel>
        <relationshipName>BankAccountAdjustmentLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Bank Account Adjustment</relationshipLabel>
        <relationshipName>BankAccountAdjustmentBankAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Bank Account Adjustment Line Items</relationshipLabel>
        <relationshipName>BankAccountAdjustmentCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CummulativeValue__c</fullName>
        <label>Cummulative Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Account Adjustment General Ledger Account</relationshipLabel>
        <relationshipName>BankAccountAdjustmentGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__StatementBalance__c</fullName>
        <label>Statement Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Bank Account Adjustment Line Item</label>
    <nameField>
        <displayFormat>BAAL{00000000}</displayFormat>
        <label>Bank Account Adjustment Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Account Adjustment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>